--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,7 +1,7 @@
 <html>  
 <head>  
 	<head> 
-    		<title> SceneViewer - Breakfast Wrap </title>  
+    		<title> SceneViewer </title>  
    		<meta charset="utf-8">  
     		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,8 +31,8 @@
 	<!-- Use it like any other HTML element --> 
 	<model-viewer 
 		ar 
-		alt="Mediterranean Egg Sandwich Breakfast Wrap"	
-		src="Wrap_AdUnit_scaleFix_GLB_v4_unlit.glb"
+		alt="Test Models for QReal"	
+		src="Furniture_GLB_unlit_v1.glb"
 	      	ios-src="Wrap_AdUnit_scaleFix_USDZ_unlit_AO_0.75.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
