--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -33,7 +33,7 @@
 		ar 
 		alt="Test Models for QReal"	
 		src="Furniture_GLB_unlit_v1.glb"
-	      	ios-src="Wrap_AdUnit_scaleFix_USDZ_unlit_AO_0.75.usdz"
+	      	ios-src="Furniture_USDZ.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
