--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -32,7 +32,7 @@
 	<model-viewer 
 		ar 
 		alt="Test Models for QReal"	
-		src="Furniture_GLB_unlit_v1.glb"
+		src="furniture-scaled.glb"
 	      	ios-src="Furniture_USDZ.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
