--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -31,7 +31,7 @@
 		ar 
 		alt="Test Models for QReal"	
 		src="furniture.glb"
-	      	ios-src="USDZ_nomaterial_sizetest.usdz"
+	      	ios-src="furniture-yellow.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
