--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -30,7 +30,7 @@
 	<model-viewer 
 		ar 
 		alt="Test Models for QReal"	
-		src="furniture.glb"
+		src="furniture_yellow.glb"
 	      	ios-src="furniture-yellow.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
