--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -41,6 +41,23 @@
 		      >
 	</model-viewer> 
 	</div>
+	
+	<div id="card">
+	<!-- Use it like any other HTML element -->
+	<model-viewer
+		ar
+		alt="Timberland Boot"
+		src="Timberland_GLB.glb"
+	  ios-src="timberland-v1.usdz"
+		background-color="#F4F4F4"
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer>
+	</div>
 </body>
 </html>
 
