--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -25,7 +25,7 @@
 	<script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
 </head>
 <body>
-	<div id="card">  
+	<div class="card">  
 	<!-- Use it like any other HTML element --> 
 	<model-viewer 
 		ar 
@@ -42,7 +42,7 @@
 	</model-viewer> 
 	</div>
 	
-	<div id="card">
+	<div class="card">
 	<!-- Use it like any other HTML element -->
 	<model-viewer
 		ar
