--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -29,7 +29,7 @@
 	<!-- Use it like any other HTML element --> 
 	<model-viewer 
 		ar 
-		alt="Test Models for QReal"	
+		alt="Furniture"	
 		src="furniture_yellow.glb"
 	      	ios-src="furniture-yellow.usdz"
 		background-color="#F4F4F4" 
@@ -48,7 +48,24 @@
 		ar
 		alt="Timberland Boot"
 		src="Timberland_GLB.glb"
-	  ios-src="timberland-v1.usdz"
+	  	ios-src="timberland-v1.usdz"
+		background-color="#F4F4F4"
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer>
+	</div> 
+	
+	<div class="card">
+	<!-- Use it like any other HTML element -->
+	<model-viewer
+		ar
+		alt="Hand-made Scarf"
+		src="KoreanHandmade_GLB.glb"
+	  	ios-src="koreanhandmade-v3.usdz"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
