--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -29,6 +29,23 @@
 	<!-- Use it like any other HTML element --> 
 	<model-viewer 
 		ar 
+		alt="Breakfast Wrap"	
+		src="bfast-wrap.glb"
+	      	ios-src="bfast-wrap.usdz"
+		background-color="#F4F4F4" 
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer> 
+	</div>
+	
+	<div class="card">  
+	<!-- Use it like any other HTML element --> 
+	<model-viewer 
+		ar 
 		alt="Furniture"	
 		src="furniture_yellow.glb"
 	      	ios-src="furniture-yellow.usdz"
