--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -31,7 +31,7 @@
 		ar 
 		alt="Breakfast Wrap"	
 		src="bfast-wrap.glb"
-	      	ios-src="bfast-wrap.usdz"
+	      	ios-src="medwh_wrap_v6.usdz"
 		background-color="#F4F4F4" 
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
