--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -109,6 +109,23 @@
 		      >
 	</model-viewer>
 	</div> 
+	 
+	<div class="card">
+	<!-- Use it like any other HTML element -->
+	<model-viewer
+		ar
+		alt="SnowGlobe"
+		src="snowglobe_004.glb"
+	  	<!--ios-src="bag_obj_50cm.usdz"-->
+		background-color="#F4F4F4"
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer>
+	</div> 
 </body>
 </html>
 
