--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -109,6 +109,20 @@
 		      >
 	</model-viewer>
 	</div> 
+	<!-- Use it like any other HTML element -->
+	<model-viewer
+		ar
+		alt="Pizza Animation"
+		src="NestlePizza_Box_Dough_F010.glb"
+		background-color="#F4F4F4"
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer>
+	</div> 
 	 
 </body>
 </html>
