--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -94,7 +94,6 @@
 	</div> 
 	 
 	<div class="card">
-	<!-- Use it like any other HTML element -->
 	<model-viewer
 		ar
 		alt="Barrington Bag"
@@ -109,7 +108,8 @@
 		      >
 	</model-viewer>
 	</div> 
-	<!-- Use it like any other HTML element -->
+	
+	<div class="card">
 	<model-viewer
 		ar
 		alt="Pizza Animation"
