--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -111,6 +111,7 @@
 	<div class="card">
 	<model-viewer
 		ar
+		autoplay
 		alt="Pizza Animation"
 		src="NestlePizza_Box_Dough_F010.glb"
 		background-color="#F4F4F4"
