--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -112,7 +112,8 @@
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="NestlePizza_Box_Dough_F010.glb"
+		<!-- src="NestlePizza_Box_Dough_F010.glb" -->
+		src="Chf.glb"		      
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
