--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -112,7 +112,7 @@
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="Chf.glb"		      
+		src="NestlePizza_Box_Dough_Test.glb"		      
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
