--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -110,7 +110,7 @@
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="wagner_glbimport_test.glb"		      
+		src="Chef1.glb"		      
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
