--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -106,12 +106,13 @@
 	</div> 
 	
 	<div class="card">
-	<!-- src="NestlePizza_Box_Dough_F010.glb" -->
+	<!-- src="NestlePizza_Box_Dough_F010.glb" -->	
 	<model-viewer
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="Chef1.glb"		      
+		src="NestlePizza_Box_Dough_F010.glb"		
+	  	ios-src="NestlePizza_Box_Dough_F010.usdz"      
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
