--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -109,7 +109,7 @@
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="NestlePizza_Box_Dough_test1.glb"		
+		src="Chf.glb"		
 	  	ios-src="NestlePizza_Box_Dough_F010.usdz"      
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
