--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -103,14 +103,14 @@
 		      >
 	</model-viewer>
 	</div> 
-	
+	<!-- ios-src="NestlePizza_Box_Dough_F010.usdz"  -->
 	<div class="card">
 	<model-viewer
 		ar
 		autoplay
 		alt="Pizza Animation"
 		src="Chf.glb"		
-	  	ios-src="NestlePizza_Box_Dough_F010.usdz"      
+	  	ios-src="test-laptop.reality"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
