--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -103,14 +103,14 @@
 		      >
 	</model-viewer>
 	</div> 
-	<!-- ios-src="NestlePizza_Box_Dough_F010.usdz"  -->
+	
 	<div class="card">
 	<model-viewer
 		ar
 		autoplay
 		alt="Pizza Animation"
-		src="Chf.glb"		
-	  	ios-src="test-laptop.reality"
+		src="Chf.glb"	
+		ios-src="NestlePizza_Box_Dough_F010.usdz"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
@@ -120,6 +120,22 @@
 		      >
 	</model-viewer>
 	</div> 
+	
+	<div class="card">
+	<model-viewer
+		ar
+		alt="Reality File Test"	
+	  	ios-src="test-laptop.reality"
+		background-color="#F4F4F4"
+		environment-image="env/BLUR.hdr"
+		stage-light-intensity="1"
+		exposure="1"
+		camera-controls
+		interaction-prompt="auto"
+		      >
+	</model-viewer>
+	</div> 		
+		
 	</body>
 </html>
 
