--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -106,8 +106,11 @@
 		camera-controls
 		interaction-prompt="auto"
 		      >
-
-		<button class="slide selected" onclick="doThis()"> </button>
+		<div class="slider">
+	    <div class="slides">
+				<button class="slide selected" onclick="doThis()"> Buy this for $160</button>
+			</div>
+		</div>
 	</model-viewer>
 	</div>
 	<!--
