--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,4 @@
-<html> 
+<html>
 	<head>
 		<title> SceneViewer </title>
 		<meta charset="utf-8">
@@ -98,7 +98,7 @@
 		ar
 		alt="Barrington Bag"
 		src="bag_gltf_50cm.glb"
-  	ios-src="bag_obj_50cm.usdz"
+  	ios-src="bag_obj_50cm.usdz#custom=button-for-quicklook.html&customHeight=large"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
