--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -98,7 +98,7 @@
 		ar
 		alt="Barrington Bag"
 		src="bag_gltf_50cm.glb"
-  	ios-src="bag_obj_50cm.usdz#custom=button-for-quicklook.html&customHeight=large"
+  	ios-src="bag_obj_50cm.usdz#custom=https://mithru.github.io/AR-test/model-viewer-template/button-for-quicklook.html&customHeight=large"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
