--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,5 @@
 <!-- v0.1.1 -->
+
 <html>
 	<head>
 		<title> SceneViewer </title>
@@ -112,7 +113,7 @@
 		ar
 		alt="Barrington Bag"
 		src="bag_gltf_50cm.glb"
-  	ios-src="bag_obj_50cm.usdz#custom=button-for-quicklook.html&customHeight=large"
+  	ios-src="bag_obj_50cm.usdz#applePayButtonType=buy&checkoutTitle=Barrington%20Bag&checkoutSubtitle=On%20Sale!%20&price=$160"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
