--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,5 @@
-<!-- v0.1.2 -->
+<!-- v0.1.3 -->
+
 <html>
 	<head>
 		<title> SceneViewer </title>
@@ -44,7 +45,6 @@
 	<body>
 	<div class="card">
 	<model-viewer
-		id="mv"
 		ar
 		alt="Breakfast Wrap"
 		src="bfast-wrap.glb"
@@ -109,10 +109,11 @@
 
 	<div class="card">
 	<model-viewer
+		id="mv"
 		ar
 		alt="Barrington Bag"
 		src="bag_gltf_50cm.glb"
-  	ios-src="bag_obj_50cm.usdz#applePayButtonType=buy&checkoutTitle=Barrington%20Bag&checkoutSubtitle=On%20Sale!%20&price=$160"
+  	ios-src="bag_obj_50cm.usdz#custom=button-for-quicklook.html&customHeight=small"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
