--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,4 @@
-<!-- v0.1.3 -->
+<!-- v0.1.4 -->
 
 <html>
 	<head>
@@ -31,8 +31,8 @@
 			window.open("https://www.barringtongifts.com/catalog/product/view/id/3593/s/bb726-265-1525850283/",'_blank');
 		}
 
-		//handle ios part
-		const linkElement = document.getElementById("mv");
+		// handle ios part
+		const linkElement = document.getElementById("ar-button");
 		linkElement.addEventListener("message", function (event) {
 			if (event.data == "_apple_ar_quicklook_button_tapped") {
 					// handle the user tap.
