--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,4 @@
-<!-- v0.1.5 -->
+<!-- v0.1.6 -->
 
 <html>
 	<head>
@@ -32,9 +32,9 @@
 		}
 
 		// handle ios part
-		const linkElement = document.getElementById("mv").shadowroot;
+		const linkElement = document.getElementById('mv');
 		console.log(linkElement);
-		linkElement.getElementById(ar-button).addEventListener("message", function (event) {
+		linkElement.getElementById('ar-button').addEventListener("message", function (event) {
 			if (event.data == "_apple_ar_quicklook_button_tapped") {
 					// handle the user tap.
 					doThis();
