--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -138,14 +138,13 @@
 		</div> -->
 	</model-viewer>
 	</div>
-	<!--
+
 	<div class="card">
 	<model-viewer
-		ar
 		autoplay
-		alt="Pizza Animation"
-		src="Chf.glb"
-		ios-src="NestlePizza_Box_Dough_F010.usdz"
+		alt="AE-test"
+		src="https://modelviewer-qreal.s3.amazonaws.com/ae-site/models/skinny_jeans/WomensJeans_GLB_x0.65_X.glb"
+		ios-src="#"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
@@ -155,7 +154,7 @@
 		      >
 	</model-viewer>
 	</div>
-
+	<!--
 	<div class="card">
 	<model-viewer
 		ar
