--- a/model-viewer-template/direct-usdz.html
+++ b/model-viewer-template/direct-usdz.html
@@ -6,7 +6,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="demo-styles.css">
-
+        <script>
+            window.onload=function(){
+                 if(document.getElementById('clickme')!=null||document.getElementById('clickme')!=""){ 
+                 document.getElementById('clickme').click();
+                 }
+                }
+        </script>
     </head>
     <body>
     <div>
