--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -144,7 +144,7 @@
 		autoplay
 		alt="AE-test"
 		src="https://modelviewer-qreal.s3.amazonaws.com/ae-site/models/skinny_jeans/WomensJeans_GLB_x0.65_X.glb"
-		ios-src="#"
+		ios-src="http://dky5neca2x8co.cloudfront.net/Goorin/Public/TheDoctorRust_X.usdz"
 		background-color="#F4F4F4"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
