--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -49,6 +49,7 @@
 	</script>
 	</head>
 	<body>
+		<!--
 	<div class="card">
 	<model-viewer
 		ar
@@ -132,10 +133,11 @@
 			View in your space
 		</button>
 		<!-- <div class="slider">
-	    <div class="slides"> -->
+	    <div class="slides">
 		<button class="slide" id="buy-button" onclick="doThis()"> Buy</button>
 			<!-- </div>
 		</div> -->
+		<!--
 	</model-viewer>
 	</div>
 
@@ -155,7 +157,7 @@
 		      >
 	</model-viewer>
 	</div>
-	<!--
+	
 	<div class="card">
 	<model-viewer
 		ar
@@ -171,5 +173,10 @@
 	</model-viewer>
 	</div>
 	-->
+		<div class="card">
+		<model-viewer src="Animation.glb" autoplay animation-name="Armature|Take 001|BaseLayer" camera-orbit="-90deg 75deg 1m" camera-target="0.001873m 0.31m 0.3441m">
+		</model-viewer>
+		</card>
+</model-viewer>
 	</body>
 </html>
