--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -174,7 +174,7 @@
 	</div>
 	-->
 		<div class="card">
-		<model-viewer src="Animation.glb" autoplay animation-name="Armature|Take 001|BaseLayer" camera-orbit="-90deg 75deg 1m" camera-target="0.001873m 0.31m 0.3441m">
+		<model-viewer ar src="Animation.glb" autoplay animation-name="Armature|Take 001|BaseLayer" camera-orbit="-90deg 75deg 1m" camera-target="0.001873m 0.31m 0.3441m">
 		</model-viewer>
 		</card>
 </model-viewer>
