--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -1,4 +1,4 @@
-<!-- v0.1.10 -->  
+<!-- v0.1.10 -->  <!-- link to this file was added in a comment here: https://github.com/google/model-viewer/issues/1531 . If you're editing this, please update your comment there. -->
 <html>
 	<head>
 		<title> SceneViewer </title>
