--- a/model-viewer-template/index.html
+++ b/model-viewer-template/index.html
@@ -55,8 +55,7 @@
 		ar
 		alt="Breakfast Wrap"
 		src="bfast-wrap.glb"
-  	ios-src="medwh_wrap_v6.usdz"
-		background-color="#F4F4F4"
+  	ios-src="bfast-wrap.usdz"
 		environment-image="env/BLUR.hdr"
 		stage-light-intensity="1"
 		exposure="1"
